# Qt_With_VsCode

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
